# lina

./: .gitignore  CMakeLists.txt  README.md
src/: #col2.txt#  #y.txt#  BenchmarkVienna.cpp  BenchmarkVienna.h  BenchmarkVienna.impl.h  CMakeLists.txt  CostFunction.cpp  CostFunction.h  CostFunction.impl.h  FeatureNormalize.cpp  FeatureNormalize.h  FeatureNormalize.impl.h  FileReader.cpp  FileReader.h  FileReader.impl.h  GradientDescent.cpp  GradientDescent.h  GradientDescent.impl.h  LinearCostFunction.cpp  LinearCostFunction.h  LinearCostFunction.impl.h  LinearRegressionSolver.cpp  LinearRegressionSolver.h  LinearRegressionSolver.impl.h  LogisticCostFunction.cpp  LogisticCostFunction.h  LogisticCostFunction.impl.h  MatrixPrinter.h  RandomFiller.cpp  RandomFiller.h  RegressionSolver.cpp  RegressionSolver.h  Timer.cpp  Timer.h  VectorPrinter.h  main.cpp  test_vienna.cpp  y.txt~
src/data/: col1.txt  col2.txt  y.txt
src/main/scala/: Tavsiye.scala
test/: Utilities.cpp  Utilities.h  test_costfunction.cpp  test_featurenormalize.cpp  test_filereader.cpp  test_gradientdescent.cpp  test_linearcostfunction.cpp  test_linearregressionsolver.cpp  test_logisticcostfunction.cpp  test_regressionsolver.cpp  tests.cpp
